--- a/dark-crows/src/index.css
+++ b/dark-crows/src/index.css
@@ -1,11 +1,21 @@
+@import 'tailwindcss/base';
+
+@import 'tailwindcss/components';
+
+@import 'tailwindcss/utilities';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: light;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -37,32 +47,38 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border:none;
+  outline:none;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 650;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #28c95a;
+  text-align: center;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #33b1c7;
 }
-button:focus,
-button:focus-visible {
+/* button:focus
+,button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+} */
+
+button:focus {
+  box-shadow: 0 0 0 4px -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #084478;
     background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #fff200;
   }
-}
+} */
