--- a/dark-crows/src/index.css
+++ b/dark-crows/src/index.css
@@ -36,6 +36,10 @@ body {
 
 }
 
+form {
+  overflow: auto; 
+}
+
 /* h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -69,7 +73,7 @@ body {
 }
 
 .login-form-container {
-  position: fixed; /* or absolute */
+  position: fixed; 
   right: 0;
   margin:50px;
   background-color: white;
@@ -85,7 +89,7 @@ body {
 
 
 .login-non-form-container{
-  position: fixed; /* or absolute */
+  position: fixed; 
   left: 0;
   margin:200px;
   display: flex;
@@ -116,5 +120,36 @@ body {
   overflow: auto;
   white-space: wrap;
 }
+
+.register-form-container{
+  height: 100vh;
+}
+
+.register-page-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin:40px;
+  padding:30px;
+  height: 100vh;
+}
+
+.register-form-container {
+  height:100vh;
+  margin:50px;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 0.5rem;
+}
+
+.password-input-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 
 
