--- a/dark-crows/src/index.css
+++ b/dark-crows/src/index.css
@@ -152,4 +152,12 @@ form {
 }
 
 
+.register-page-slider-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
 
