--- a/dark-crows/src/card.css
+++ b/dark-crows/src/card.css
@@ -1,57 +1,68 @@
 .card {
-    --background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
-    width: 300px;
-    height: 350px;
-    padding: 5px;
-    border-radius: 1rem;
-    overflow: visible;
-    background: #f7ba2b;
-    background: var(--background);
     position: relative;
-    z-index: 1;
-   }
-   
-   .card::after {
+    width: 190px;
+    height: 254px;
+    color: #fff;
+    transition: 0.5s;
+    cursor: pointer;
+  }
+  
+  .card:hover {
+    transform: translateY(-20px);
+  }
+  
+  .card::before {
+    content: '';
+    width: 100%;
+    height: 100%;
     position: absolute;
-    content: "";
-    top: 30px;
+    top: 0;
     left: 0;
-    right: 0;
-    z-index: -1;
-    height: 100%;
+    background: linear-gradient(45deg, #28c95a, #00eaff);
+    border-radius: 1.2em;
+  }
+  
+  .card::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    transform: scale(0.8);
-    filter: blur(25px);
-    background: #f7ba2b;
-    background: var(--background);
-    transition: opacity .5s;
-   }
-   
-   .card-info {
-    --color: #181818;
-    background: var(--color);
-    color: var(--color);
+    height: 100%;
+    /* background: linear-gradient(45deg, #28c95a, #00eaff); */
+    /* filter: blur(30px); */
+  }
+  
+  /* .card span {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    right: 6px;
+    bottom: 6px;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 2;
+    border-radius: 1em;
+  } */
+  
+  /* .card span::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.1);
+  } */
+  
+  .card .content {
+    position: relative;
+    padding: 10px;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    overflow: visible;
-    border-radius: .7rem;
-   }
-   
-   .card .title {
-    font-weight: bold;
-    letter-spacing: .1em;
-   }
-   
-   /*Hover*/
-   .card:hover::after {
-    opacity: 0;
-   }
-   
-   .card:hover .card-info {
-    color: #f7ba2b;
-    transition: color 1s;
-   }
-   
+    justify-content: center;
+    font-weight: 800;
+    font-size: 1.5em;
+  }
