--- a/dark-crows/src/index.css
+++ b/dark-crows/src/index.css
@@ -178,5 +178,21 @@ h2{
   color: #28c95a;
 }
 
+.reg-form-container {
+  padding: 70px;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 10px 0 15px rgba(0, 0, 0, 0.35);
+  border-radius: 0.5rem;
+}
+
+.reg-parent {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  gap: 20px;
+}
+
 
 
